--- a/openvidu-node-client/package.json
+++ b/openvidu-node-client/package.json
@@ -15,10 +15,10 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/node": "^6.0.78",
-    "codelyzer": "~2.0.0",
-    "ts-node": "~2.0.0",
-    "tslint": "~4.5.0",
-    "typescript": "2.3.4"
+    "@types/node": "9.4.0",
+    "codelyzer": "4.1.0",
+    "ts-node": "4.1.0",
+    "tslint": "5.9.1",
+    "typescript": "2.6.2"
   }
 }
