--- a/openvidu-server/docker/openvidu-server/supervisord.conf
+++ b/openvidu-server/docker/openvidu-server/supervisord.conf
@@ -5,5 +5,5 @@ pidfile=/var/run/supervisord.pid;
 loglevel=debug
 
 [program:openvidu-server]
-command=/bin/bash -c "java -jar /openvidu-server.jar"
+command=/bin/bash -c "java -jar /openvidu-server-cbx.jar"
 redirect_stderr=true
