--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -9,7 +9,7 @@ node('container') {
           sh 'git clone https://github.com/OpenVidu/openvidu.git'
         }
         stage('OpenVidu parent build') {
-          sh 'mvn -DskipTests=true install'
+          sh 'cd openvidu && mvn -DskipTests=true install'
         }
         stage('OpenVidu Browser build') {
           sh 'cd openvidu-browser && npm install && npm run updatetsc && npm link'
