--- a/openvidu-browser/ts/OpenVidu/tsconfig.json
+++ b/openvidu-browser/ts/OpenVidu/tsconfig.json
@@ -21,7 +21,8 @@
 		"outDir": "../../lib",
 		"emitBOM": false,
 		"preserveConstEnums": true,
-		"sourceMap": true
+		"sourceMap": true,
+		"lib": ["dom","es5","es2015.promise","scripthost"]
 	},
 	//"buildOnSave": true,
 	"compileOnSave": true
