--- a/openvidu-browser/ts/OpenViduInternal/tsconfig.json
+++ b/openvidu-browser/ts/OpenViduInternal/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
 		"allowJs": true,
-		"target": "es6",
+		"target": "es5",
 		"module": "commonjs",
 		//"noImplicitAny": true,
 		"noImplicitThis": true,
@@ -21,8 +21,9 @@
 		"outDir": "../../lib/OpenViduInternal",
 		"emitBOM": false,
 		"preserveConstEnums": true,
-		"sourceMap": true
+		"sourceMap": true,
+		"lib": ["dom","es5","es2015.promise","scripthost"]
 	},
 	//"buildOnSave": true,
-	"compileOnSave":true
+	"compileOnSave": true
 }
