--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -10,6 +10,6 @@ kms.uris=[\"ws://localhost:8888/kurento\"]
 openvidu.secret: YOUR_SECRET
 openvidu.publicurl: local
 openvidu.cdr: false
-openvidu.recording: true
+openvidu.recording: false
 openvidu.recording.path: /home/recordings
 openvidu.recording.free-access: false
