--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>io.openvidu</groupId>
 	<artifactId>openvidu-parent</artifactId>
-	<version>1.1.0</version>
+	<version>1.9.0-beta-1</version>
 	<packaging>pom</packaging>
 
 	<name>OpenVidu</name>
@@ -41,7 +41,7 @@
 	</developers>
 
 	<properties>
-		<version.kurento>6.6.2</version.kurento>
+		<version.kurento>6.7.0</version.kurento>
 		<version.spring-boot>1.4.2.RELEASE</version.spring-boot>
 		<version.junit>4.12</version.junit>
 		<version.slf4j>1.7.13</version.slf4j>
