--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -13,7 +13,7 @@ server.ssl.key-alias: openvidu-selfsigned
 openvidu.secret: MY_SECRET
 openvidu.publicurl: local
 openvidu.cdr: false
-openvidu.recording: true
+openvidu.recording: false
 openvidu.recording.path: /opt/openvidu/recordings
 openvidu.recording.public-access: false
 openvidu.recording.notification: publisher_moderator
