--- a/openvidu-server/src/angular/frontend/package.json
+++ b/openvidu-server/src/angular/frontend/package.json
@@ -1,31 +1,31 @@
 {
     "dependencies": {
-        "@angular/animations": "6.0.3",
-        "@angular/cdk": "6.2.1",
-        "@angular/common": "6.0.3",
-        "@angular/compiler": "6.0.3",
-        "@angular/core": "6.0.3",
-        "@angular/flex-layout": "^6.0.0-beta.15",
-        "@angular/forms": "6.0.3",
-        "@angular/http": "6.0.3",
-        "@angular/material": "6.2.1",
-        "@angular/platform-browser": "6.0.3",
-        "@angular/platform-browser-dynamic": "6.0.3",
-        "@angular/router": "6.0.3",
+        "@angular/animations": "6.0.7",
+        "@angular/cdk": "6.3.2",
+        "@angular/common": "6.0.7",
+        "@angular/compiler": "6.0.7",
+        "@angular/core": "6.0.7",
+        "@angular/flex-layout": "^6.0.0-beta.16",
+        "@angular/forms": "6.0.7",
+        "@angular/http": "6.0.7",
+        "@angular/material": "6.3.2",
+        "@angular/platform-browser": "6.0.7",
+        "@angular/platform-browser-dynamic": "6.0.7",
+        "@angular/router": "6.0.7",
         "core-js": "^2.5.7",
         "hammerjs": "2.0.8",
         "openvidu-browser": "2.2.0",
-        "rxjs": "^6.2.0",
+        "rxjs": "6.2.1",
         "zone.js": "0.8.26"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "^0.6.8",
-        "@angular/cli": "6.0.7",
-        "@angular/compiler-cli": "6.0.3",
+        "@angular/cli": "6.0.8",
+        "@angular/compiler-cli": "6.0.7",
         "@types/jasmine": "2.8.8",
-        "@types/node": "10.3.1",
-        "codelyzer": "4.3.0",
-        "ts-node": "6.1.0",
+        "@types/node": "10.5.1",
+        "codelyzer": "4.4.2",
+        "ts-node": "7.0.0",
         "tslint": "5.10.0",
         "typescript": "2.7.2"
     },
