--- a/openvidu-testapp/package.json
+++ b/openvidu-testapp/package.json
@@ -1,48 +1,48 @@
 {
-    "dependencies": {
-        "@angular/animations": "6.0.3", 
-        "@angular/cdk": "6.2.0", 
-        "@angular/common": "6.0.3", 
-        "@angular/compiler": "6.0.3", 
-        "@angular/core": "6.0.3", 
-        "@angular/flex-layout": "6.0.0-beta.15", 
-        "@angular/forms": "6.0.3", 
-        "@angular/http": "6.0.3", 
-        "@angular/material": "6.2.0", 
-        "@angular/platform-browser": "6.0.3", 
-        "@angular/platform-browser-dynamic": "6.0.3", 
-        "@angular/router": "6.0.3", 
-        "colormap": "2.3.0", 
-        "core-js": "2.5.7", 
-        "hammerjs": "2.0.8", 
-        "openvidu-browser": "2.2.0", 
-        "openvidu-node-client": "2.0.0", 
-        "rxjs": "6.2.0", 
-        "zone.js": "0.8.26"
-    }, 
-    "devDependencies": {
-        "@angular-devkit/build-angular": "~0.6.6", 
-        "@angular/cli": "6.0.7", 
-        "@angular/compiler-cli": "6.0.3", 
-        "@angular/language-service": "6.0.3", 
-        "@types/jasmine": "2.8.8", 
-        "@types/jasminewd2": "2.0.3", 
-        "@types/node": "10.1.2", 
-        "codelyzer": "4.3.0", 
-        "ts-node": "6.1.0", 
-        "tslint": "5.10.0", 
-        "typescript": "~2.7.2"
-    }, 
-    "license": "Apache-2.0", 
-    "name": "openvidu-testapp", 
-    "private": true, 
-    "scripts": {
-        "build": "ng build", 
-        "e2e": "ng e2e", 
-        "lint": "ng lint", 
-        "ng": "ng", 
-        "start": "ng serve", 
-        "test": "ng test"
-    }, 
-    "version": "2.2.0"
+  "dependencies": {
+    "@angular/animations": "6.0.7",
+    "@angular/cdk": "6.3.2",
+    "@angular/common": "6.0.7",
+    "@angular/compiler": "6.0.7",
+    "@angular/core": "6.0.7",
+    "@angular/flex-layout": "6.0.0-beta.16",
+    "@angular/forms": "6.0.7",
+    "@angular/http": "6.0.7",
+    "@angular/material": "6.3.2",
+    "@angular/platform-browser": "6.0.7",
+    "@angular/platform-browser-dynamic": "6.0.7",
+    "@angular/router": "6.0.7",
+    "colormap": "2.3.0",
+    "core-js": "2.5.7",
+    "hammerjs": "2.0.8",
+    "openvidu-browser": "2.2.0",
+    "openvidu-node-client": "2.2.0",
+    "rxjs": "6.2.1",
+    "zone.js": "0.8.26"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.8",
+    "@angular/cli": "6.0.8",
+    "@angular/compiler-cli": "6.0.7",
+    "@angular/language-service": "6.0.7",
+    "@types/jasmine": "2.8.8",
+    "@types/jasminewd2": "2.0.3",
+    "@types/node": "10.5.1",
+    "codelyzer": "4.4.2",
+    "ts-node": "7.0.0",
+    "tslint": "5.10.0",
+    "typescript": "2.7.2"
+  },
+  "license": "Apache-2.0",
+  "name": "openvidu-testapp",
+  "private": true,
+  "scripts": {
+    "build": "ng build",
+    "e2e": "ng e2e",
+    "lint": "ng lint",
+    "ng": "ng",
+    "start": "ng serve",
+    "test": "ng test"
+  },
+  "version": "2.2.0"
 }
