--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -7,6 +7,10 @@ node('container') {
         stage('Preparation') {
           sh 'rm -rf openvidu || true'
           sh 'rm -rf /opt/openvidu/recordings/{,.[!.]}* || true'
+
+          sh 'git clone https://github.com/Kurento/kurento-java'
+          sh 'cd kurento-java && mvn install'
+
           sh 'git clone https://github.com/OpenVidu/openvidu.git'
         }
         stage('OpenVidu parent build') {
