--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -51,7 +51,13 @@ node('container') {
           sh 'cd openvidu/openvidu-testapp/dist && http-server -S -p 4200 &> /testapp.log &'
           sh '/usr/bin/kurento-media-server &> /kms.log &'
           sh 'cd openvidu/openvidu-server && mvn --batch-mode clean compile package'
-          sh 'cd openvidu/openvidu-server/target && java -jar -Dopenvidu.publicurl=https://172.17.0.1:4443/ -Dopenvidu.recording=true openvidu-server-*.jar &> /openvidu-server.log &'
+          sh(script: '''#!/bin/bash
+            if "$OPENVIDU_RECORDING_VERSION" != "default"; then
+              cd openvidu/openvidu-server/target && java -jar -Dopenvidu.publicurl=https://172.17.0.1:4443/ -Dopenvidu.recording=true -Dopenvidu.recording.version=$OPENVIDU_RECORDING_VERSION openvidu-server-*.jar &> /openvidu-server.log &
+            else
+              cd openvidu/openvidu-server/target && java -jar -Dopenvidu.publicurl=https://172.17.0.1:4443/ -Dopenvidu.recording=true openvidu-server-*.jar &> /openvidu-server.log &
+            fi
+          '''.stripIndent())
           sh 'until $(curl --insecure --output /dev/null --silent --head --fail https://OPENVIDUAPP:MY_SECRET@localhost:4443/); do echo "Waiting for openvidu-server..."; sleep 2; done'
         }
         stage ('E2E tests') {
