--- a/openvidu-server/docker/openvidu-server/Dockerfile
+++ b/openvidu-server/docker/openvidu-server/Dockerfile
@@ -12,7 +12,9 @@ RUN apt-get update && apt-get install -y \
 # Copy OpenVidu Server
 COPY openvidu-server.jar /
 COPY ./entrypoint.sh /usr/local/bin
-RUN chmod +x /usr/local/bin/entrypoint.sh
+COPY ./discover_my_public_ip.sh /usr/local/bin
+RUN chmod +x /usr/local/bin/entrypoint.sh && \
+    chmod +x /usr/local/bin/discover_my_public_ip.sh
 
 EXPOSE 4443
 
