--- a/openvidu-server/deployments/ce/docker-compose/.env
+++ b/openvidu-server/deployments/ce/docker-compose/.env
@@ -128,10 +128,12 @@ OPENVIDU_STREAMS_VIDEO_MIN_SEND_BANDWIDTH=300
 
 # All sessions of OpenVidu will try to force this codec. If OPENVIDU_STREAMS_ALLOW_TRANSCODING=true
 # when a codec can not be forced, transcoding will be allowed
+# Values: VP8, H264, NONE
 # Default value is VP8
 # OPENVIDU_STREAMS_FORCED_VIDEO_CODEC=VP8
 
 # Allow transcoding if codec specified in OPENVIDU_STREAMS_FORCED_VIDEO_CODEC can not be applied
+# Values: true | false
 # Default value is false
 # OPENVIDU_STREAMS_ALLOW_TRANSCODING=false
 
