--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -253,7 +253,10 @@ OPENVIDU_STREAMS_VIDEO_MIN_SEND_BANDWIDTH=300
 # OPENVIDU_STREAMS_ALLOW_TRANSCODING=false
 
 # Send openvidu-browser logs of clients to Elasticsearch
-# Default value is 'disabled'
+# Possible values:
+# - disabled: Don't send logs. (default)
+# - debug: Send all openvidu-browser logs
+# - debug_app: Send openvidu-browser logs and frontend app logs
 # OPENVIDU_BROWSER_LOGS=disabled
 
 # true to enable OpenVidu Webhook service. false' otherwise
